--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="bg-gray-50">
     <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
-        <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900">
+        <a class="flex items-center mb-6 text-2xl font-semibold text-gray-900">
             <img class="w-8 h-8 mr-2" src="/assets/dice.jpg" alt="logo">
             Techopoly    
         </a>
