--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,34 +1,78 @@
 <section class="h-screen bg-gray-50 flex flex-col items-center justify-between">
-    <div class="flex justify-around w-full font-bold text-5xl pb-[80px]">
-        <p class="">Wall of Fame</p>
-        <button
-  type="button"
-  class="font-bold text-5xl inline-block rounded bg-yellow-300 px-6 pb-2 pt-2.5 uppercase leading-normal text-neutral-800 shadow-[0_4px_9px_-4px_#cbcbcb] transition duration-150 ease-in-out hover:bg-yellow-400 hover:shadow-[0_8px_9px_-4px_rgba(203,203,203,0.3),0_4px_18px_0_rgba(203,203,203,0.2)] focus:bg-yellow-400 focus:shadow-[0_8px_9px_-4px_rgba(203,203,203,0.3),0_4px_18px_0_rgba(203,203,203,0.2)] focus:outline-none focus:ring-0 active:bg-yellow-500 active:shadow-[0_8px_9px_-4px_rgba(203,203,203,0.3),0_4px_18px_0_rgba(203,203,203,0.2)]">
-  Team Portfolio
-</button>
+
+    <!-- THE HEADER PART WHICH CONTAINS (HALL OF FAME) AND (TEAM PORTFOLIO BUTTON) -->
+    <div class="flex justify-around w-full font-bold text-4xl pb-[20px]">
+        <!-- HALL OF FAME -->
+        <div class="flex flex-col bg-[#2C3333] rounded py-2 px-4 mt-2 shadow shadow-gray-500">
+            <p class="underline mb-4 text-[#0E8388]">Wall of Fame</p>
+            <div class="flex gap-1">
+                <div class="flex flex-col items-center">
+                    <img class="inline-block object-cover w-20 h-20 rounded-full border-[#ffd700] border-[5px]" src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="Profile image"/>
+                    <span class="text-lg mt-1 text-[#ffd700]">#1</span>
+                </div>
+                <div class="flex flex-col items-center">
+                    <img class="inline-block object-cover w-20 h-20 border-[#C0C0C0] border-[5px] rounded-full" src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="Profile image"/>
+                    <span class="text-lg mt-1 text-[#C0C0C0]">#2</span>
+                </div>
+                <div class="flex flex-col items-center">
+                    <img class="inline-block object-cover w-20 h-20 border-[#CD7F32] border-[5px] rounded-full" src="https://images.unsplash.com/photo-1530785602389-07594beb8b73?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="Profile image"/>
+                    <span class="text-lg mt-1 text-[#CD7F32]">#3</span>
+                </div>
+                <!-- <img class="inline-block object-cover w-12 h-12 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="Profile image"/>
+                <img class="inline-block object-cover w-12 h-12 rounded-full" src="https://images.pexels.com/photos/2955305/pexels-photo-2955305.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="Profile image"/> -->
+                <div class="flex -space-x-4 items-center">
+                    <img class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="Profile image"/>
+                    <img class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="Profile image"/>
+                    <img class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" src="https://images.pexels.com/photos/2955305/pexels-photo-2955305.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="Profile image"/>
+                    <img class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" src="https://images.unsplash.com/photo-1488426862026-3ee34a7d66df?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1727&q=80" alt="Profile image"/>
+                    <img class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="Profile image"/>
+                    <span class="flex items-center justify-center w-10 h-10 text-xs font-medium text-white bg-gray-700 border-2 border-white rounded-full" href="#">+99</span>
+                </div>
+            </div>
+        </div>
+
+        <!-- TEAM PORTFOLIO BUTTON -->
+        <div class="flex items-center">
+            <div class="flex justify-between items-center cursor-pointer font-bold text-4xl rounded bg-yellow-300 px-4 py-2 leading-normal text-neutral-800 shadow-[0_4px_9px_-4px_#cbcbcb] transition duration-150 ease-in-out hover:bg-yellow-400  focus:bg-yellow-400" (click)="toggle_portfolio()">
+                <div class="relative inline-block mb-2">
+                    <img class="inline-block object-cover w-12 h-12 rounded-full" src="https://images.pexels.com/photos/2955305/pexels-photo-2955305.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="Profile image"/>
+                    <span class="absolute bottom-0 right-0 inline-block w-3 h-3 bg-green-600 border-2 border-white rounded-full"></span>
+                </div>
+                <span class="ml-1">{{team_id?.toUpperCase()}}</span>
+            </div>
+        </div>
     </div>
+
+    <!-- THE TECHOPOLY BOARD GAME TABLE -->
     <div class="flex flex-col border-black border-double border-[10px]">
         <!-- ROW 1 -->
         <div class="flex">
             <div class="cell bg-yellow-400">
+                <div [innerHTML]="list[4]"></div>
                 <img class="w-full h-full" src="/assets/datacenter.jpg" alt="">
             </div>
             <div class="cell bg-yellow-400">
+                <div [innerHTML]="list[5]"></div>
                 <img class="w-full h-full" src="/assets/tax.jpg" alt="">
             </div>
             <div class="cell bg-yellow-400 ">
+                <div [innerHTML]="list[6]"></div>
                 <img class="w-full h-full" src="/assets/treasure.jpg" alt="">
             </div>
             <div class="cell bg-yellow-400">
+                <div [innerHTML]="list[7]"></div>
                 <img class="w-full h-full" src="/assets/fashion.jpg" alt="">
             </div>
             <div class="cell bg-white">
+                <div [innerHTML]="list[8]"></div>
                 <img class="w-full h-full p-2" src="/assets/blackhole.jpg" alt="">
             </div>
             <div class="cell bg-yellow-400">
+                <div [innerHTML]="list[9]"></div>
                 <img class="w-full h-full" src="/assets/restaurant.jpg" alt="">
             </div>
             <div class="cell bg-yellow-400">
+                <div [innerHTML]="list[10]"></div>
                 <img class="w-full h-full" src="/assets/health.avif" alt="">
             </div>
         </div>
@@ -36,10 +80,12 @@
         <!-- ROW 2 -->
         <div class="flex">
             <div class="cell bg-white">
+                <div [innerHTML]="list[3]"></div>
                 <img class="p-2 w-full h-full" src="/assets/blackhole.jpg" alt="">
             </div>
             <div class="grow border-black border-x-2 border-t-2"></div>
             <div class="cell bg-lime-400">
+                <div [innerHTML]="list[11]"></div>
                 <img class="w-full h-full" src="/assets/housing.jpg" alt="">
             </div>
         </div>
@@ -47,6 +93,7 @@
         <!-- ROW 3 -->
         <div class="flex">
             <div class="cell bg-slate-400">
+                <div [innerHTML]="list[2]"></div>
                 <img src="/assets/restaurant.jpg" alt="">
             </div>
             <div class="grow border-black border-x-2">
@@ -56,6 +103,7 @@
                 </a>
             </div>
             <div class="cell bg-lime-400">
+                <div [innerHTML]="list[12]"></div>
                 <img class="w-full h-full" src="/assets/treasure.jpg" alt="">
             </div>
         </div>
@@ -63,8 +111,10 @@
         <!-- ROW 4 -->
         <div class="flex">
             <div class="cell bg-slate-400">
+                <div [innerHTML]="list[1]"></div>
                 <img class="w-full h-full" src="/assets/grocery.jpg" alt="">
             </div>
+            <!-- DICE -->
             <div class="grow border-black border-x-2 border-b-2 flex justify-center">
                 <div class="dice" [ngStyle]="style">
                     <div class="face front"></div>
@@ -76,6 +126,7 @@
                 </div>
             </div>
             <div class="cell bg-lime-400">
+                <div [innerHTML]="list[13]"></div>
                 <img class="w-full h-full" src="/assets/fashion.jpg" alt="">
             </div>
         </div>
@@ -83,36 +134,125 @@
         <!-- ROW 5 -->
         <div class="flex">
             <div class="cell bg-yellow-400">
+                <div [innerHTML]="list[0]"></div>
+                <!-- <app-team-dp></app-team-dp> -->
                 <img src="/assets/start.png" alt="">
             </div>
             <div class="cell bg-yellow-400">
+                <div [innerHTML]="list[19]"></div>
                 <img class="w-full h-full" src="/assets/theater.jpg" alt="">
             </div>
             <div class="cell bg-yellow-400">
+                <div [innerHTML]="list[18]"></div>
                 <img class="w-full h-full" src="/assets/electronics.jpg" alt="">
             </div>
             <div class="cell bg-white">
+                <div [innerHTML]="list[17]"></div>
                 <img class="p-2 w-full h-full" src="/assets/blackhole.jpg" alt="">
             </div>
             <div class="cell bg-yellow-400">
+                <div [innerHTML]="list[16]"></div>
                 <img class="w-full h-full" src="/assets/office.avif" alt="">
             </div>
             <div class="cell bg-yellow-400">
+                <div [innerHTML]="list[15]"></div>
                 <img class="w-full h-full" src="/assets/meditation.avif" alt="">
             </div>
             <div class="cell bg-yellow-400">
+                <div [innerHTML]="list[14]"></div>
                 <img class="w-full h-full" src="/assets/jail.webp" alt="">
             </div>
         </div>
     </div>
-    <div class="flex justify-around w-full font-bold text-5xl pt-[80px] mb-2">
-        <p class="">Live Transaction</p>
+
+    <!-- THE FOOTER WHICH CONTAINS LIVE TRANSACTION AND ROLL DICE BUTTON -->
+    <div class="flex justify-around w-full font-bold text-4xl pt-[20px] pb-2">
+        <div class="w-[40%]">
+            <span class="underline">Live Transaction</span> <br>
+            <span class="font-normal text-xl bg-slate-200 p-1 roundes shadow">That team has won that !</span>
+        </div>
         <div>
             <div class="text-lg font-normal">Waiting Time: <span class="font-bold">{{waitCount}}</span></div>
             <button id="btnDice" class="roll text-4xl" (click)="randomDice()" [disabled]="isDisabled">
-                Roll Dice:
-                <span>{{result}}</span>
+                Roll Dice: <span>{{outcome?outcome:0}}</span>
             </button>
         </div>
     </div>
 </section>
+
+
+<!-- TEAM PORTFOLIO SECTION (MODAL) -->
+<div id="portfolio" class="relative z-10 hidden" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+    <!--
+      Background backdrop, show/hide based on modal state.
+  
+      Entering: "ease-out duration-300"
+        From: "opacity-0"
+        To: "opacity-100"
+      Leaving: "ease-in duration-200"
+        From: "opacity-100"
+        To: "opacity-0"
+    -->
+    <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"></div>
+  
+    <div class="fixed inset-0 z-10 overflow-y-auto">
+      <div class="flex min-h-full items-end justify-center p-4 text-center sm:items-center sm:p-0">
+        <!--
+          Modal panel, show/hide based on modal state.
+  
+          Entering: "ease-out duration-300"
+            From: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+            To: "opacity-100 translate-y-0 sm:scale-100"
+          Leaving: "ease-in duration-200"
+            From: "opacity-100 translate-y-0 sm:scale-100"
+            To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+        -->
+        <div class="relative transform overflow-hidden rounded-lg bg-white text-left shadow-xl transition-all sm:my-8 sm:w-full sm:max-w-lg">
+
+          <!-- HEADER SECTION WHICH CONTAINS TEAM ID AND DISPLAY PICTURE -->
+          <div class="flex justify-between bg-white px-4 pb-4 pt-5 sm:p-6 sm:pb-4">
+            <div class="flex w-[80%] justify-around">
+                <div class="relative inline-block mb-2">
+                    <img class="inline-block object-cover w-16 h-16 rounded-full" src="https://images.pexels.com/photos/2955305/pexels-photo-2955305.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="Profile image"/>
+                    <span class="absolute bottom-0 right-0 inline-block w-4 h-4 bg-green-600 border-2 border-white rounded-full"></span>
+                </div>
+                <div class="w-[80%] mt-3 text-center sm:ml-4 sm:mt-0 sm:text-left">
+                    <h3 class="text-base font-semibold leading-6 text-gray-900" id="modal-title">Hi, {{ team_id?.toUpperCase() }}.</h3>
+                    <div class="mt-2">
+                        <p class="text-sm text-gray-500">Following are the details about your assets, cash and net worth.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="flex items-center w-[20%]">
+                <button type="button" class="inline-flex w-full justify-center rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 sm:ml-3 sm:w-auto" (click)="sign_out()">Sign Out</button>
+            </div>
+          </div>
+
+          <!-- MIDDLE PART i.e. DESCRIPTION ABOUT THE TEAM -->
+          <div class="flex flex-col px-4 py-3">
+            <div class="flex justify-around w-full">
+                <ul>
+                    <span class="underline font-bold">Assets</span>
+                    <li>Restaurant</li>
+                    <li>Casino</li>
+                    <li>Fashion Retail</li>
+                </ul>
+                <p><span class="underline font-bold">Cash:</span> <br> 10200</p>
+                <p><span class="underline font-bold">Net Worth:</span> <br> 1000000</p>
+            </div>
+            <div class="mt-5 ml-5">
+                <span class="underline font-bold">Recent Transaction:</span><br>
+                <span>Team this got that.</span>
+            </div>
+          </div>
+
+          <!-- CLOSE AND SIGN OUT BUTTON -->
+          <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
+            
+            <button type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto" (click)="toggle_portfolio()">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
