--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -531,7 +531,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 5.25l-7.5 7.5-7.5-7.5m15 6l-7.5 7.5-7.5-7.5" />
                             </svg>
                             <span class="capitalize">
-                                {{my_details.recent_transaction.assets}} ({{my_details.recent_transaction.message}})
+                                {{my_details.recent_asset}} ({{my_details.recent_transaction.message}})
                             </span>
                         </div>
                     </div>
