--- a/src/app/admin/admin-home/admin-home.component.html
+++ b/src/app/admin/admin-home/admin-home.component.html
@@ -110,11 +110,12 @@
             </a>
             <a routerLink="/admin/leaderboard" type="button" class="mb-4 bg-black text-white focus:ring-4 focus:outline-none focus:ring-white font-medium rounded-lg text-sm px-5 py-2.5 text-center  bg-primary-600  hover:bg-gray-800  focus:ring-primary-800" >Team Leaderboard</a>
             <div class="flex items-center">
+                <button type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-blue-500 sm:mt-0 sm:w-auto" (click)="ngOnInit()">Refresh</button>
                 <button type="button" class="inline-flex w-full justify-center rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 sm:ml-3 sm:w-auto" (click)="sign_out()">Sign Out</button>
             </div>
         </div>
         <!-- <div class="w-full bg-white rounded-lg shadow border border-gray-700"> -->
-            <!-- <div class="w-full bg-white rounded-lg shadow p-6 space-y-6 border border-gray-700">        -->
+            <!-- <div class="w-full bg-white rounded-lg shadow p-6 space-y-6 border border-gray-700">  -->
         <div class="relative overflow-x-auto shadow-md sm:rounded-lg w-full">
             <table class="w-full text-sm text-left text-gray-500">
                 <thead class="text-xs text-gray-700 uppercase bg-gray-200">
