--- a/src/app/admin/admin-home/admin-home.component.html
+++ b/src/app/admin/admin-home/admin-home.component.html
@@ -1,5 +1,5 @@
 <section class="bg-gray-50 flex justify-around">
-    <div class="flex flex-col items-center justify-center py-8 w-[35%] ml-5">
+    <div class="flex flex-col items-center justify-center py-8 w-[35%] ml-5 overflow-auto">
         <a class="flex items-center mb-6 text-2xl font-semibold text-gray-900">
             <img class="w-8 h-8 mr-2" src="/assets/dice.jpg" alt="logo">
             Techopoly    
@@ -103,12 +103,17 @@
 
 
     <div class="flex flex-col items-center py-8 w-[65%] mx-11">
-        <div class="flex justify-between w-full">
+        <div class="flex justify-between w-full overflow-auto">
             <a class="flex items-center text-2xl font-semibold text-gray-900">
                 <!-- <img class="w-8 h-8 mr-2" src="/assets/dice.jpg" alt="logo"> -->
                 Team Details
             </a>
-            <a routerLink="/admin/leaderboard" type="button" class="mb-4 bg-black text-white focus:ring-4 focus:outline-none focus:ring-white font-medium rounded-lg text-sm px-5 py-2.5 text-center  bg-primary-600  hover:bg-gray-800  focus:ring-primary-800" >Team Leaderboard</a>
+            <div class="flex justify-around space-x-2">
+                <a routerLink="/admin/leaderboard" type="button" class="mb-4 bg-[#A459D1] text-white focus:ring-4 focus:outline-none focus:ring-white font-medium rounded-lg text-sm px-5 py-2.5 text-center  bg-primary-600  hover:bg-[#B799FF]  focus:ring-primary-800" >Team Leaderboard</a>
+                <a routerLink="/admin/questions" type="button" class="mb-4 bg-black text-white focus:ring-4 focus:outline-none focus:ring-white font-medium rounded-lg text-sm px-5 py-2.5 text-center  bg-primary-600  hover:bg-gray-800  focus:ring-primary-800">Add Questions</a>
+                <a routerLink="/admin/rewards" type="button" class="mb-4 bg-black text-white focus:ring-4 focus:outline-none focus:ring-white font-medium rounded-lg text-sm px-5 py-2.5 text-center  bg-primary-600  hover:bg-gray-800  focus:ring-primary-800">Add Rewards</a>
+                <a routerLink="/admin/penalty" type="button" class="mb-4 bg-black text-white focus:ring-4 focus:outline-none focus:ring-white font-medium rounded-lg text-sm px-5 py-2.5 text-center  bg-primary-600  hover:bg-gray-800  focus:ring-primary-800">Add Penalty</a>
+            </div>
             <div class="flex items-center">
                 <button type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-blue-500 sm:mt-0 sm:w-auto" (click)="ngOnInit()">Refresh</button>
                 <button type="button" class="inline-flex w-full justify-center rounded-md bg-red-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 sm:ml-3 sm:w-auto" (click)="sign_out()">Sign Out</button>
